[gd_scene load_steps=4 format=3 uid="uid://d1s4f151qyvjh"]

[ext_resource type="Script" path="res://scenes/unit/unit.gd" id="1_htrur"]
[ext_resource type="PackedScene" uid="uid://c4vikumqfowjy" path="res://scenes/health_bar/health_bar.tscn" id="2_qexcq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jj68h"]
radius = 20.0

[node name="Unit" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 0
collision_mask = 3
script = ExtResource("1_htrur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jj68h")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 30.0
target_desired_distance = 50.0

[node name="EnemyDetect" type="Node2D" parent="."]

[node name="DetectRayCast" type="RayCast2D" parent="EnemyDetect"]
rotation = -1.5708
collision_mask = 0

[node name="AttackDetect" type="Node2D" parent="."]

[node name="AttackRayCast" type="RayCast2D" parent="AttackDetect"]
rotation = -1.5708
collision_mask = 0

[node name="FriendDetect" type="Node2D" parent="."]

[node name="FriendRayCast" type="RayCast2D" parent="FriendDetect"]
rotation = -1.5708
collision_mask = 0

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("2_qexcq")]
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -50.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
